# django_practical

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
M_09_permissions/mysite/myauth/: views.py
mysite/: log.txt  requirements.txt
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myauth/: models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: avatar_update_form.html  register.html  user-profile.html  users-list.html
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: Middlewares.py  middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: access-denied.html  file-size-error.html  file-upload.html
mysite/shopapp/: admin.py  admin_mixins.py  api.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  profiles-fixture.json  users-fixture.json
mysite/shopapp/management/commands/: create_orders.py  create_products.py  update_order.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_product_created_by.py  0008_alter_product_created_by.py  0009_alter_order_options_alter_product_options.py
(+16 files in other folders)
