[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Алишер Абдукаххаров <aaabdukakhkharov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.3"
pillow = "^10.0.1"
gunicorn = "^21.2.0"
drf-spectacular = "^0.26.4"
sentry-sdk = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
